istio-test/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test-virtualservice
  namespace: istio-apps
spec:
  hosts:
  - "*"
  gateways:
  - istio-test-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-test
